# Bike-Tour-Assistant

./: .eslintrc.js  .gitignore  CMakeLists.txt  README.md  app.json  bluetooth_main.c  core.h  devices.txt  eas.json  main.c  main.cpp  measure_battery.py  package-lock.json  package.json  tsconfig.json
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/bike_tour_assistant/: MainActivity.kt  MainApplication.kt
android/app/src/main/res/values/: colors.xml  strings.xml
bluetooth/: bluetooth_server.c  bluetooth_server.h
bluetooth/btferret/: btlib.c
display/: draw.c  draw.h  intro_view.c  loader.c  loader.h
ios/: Podfile
ios/BikeTourAssistant/: Info.plist
ios/BikeTourAssistant.xcodeproj/: project.pbxproj
ios/BikeTourAssistant.xcodeproj/xcshareddata/xcschemes/: BikeTourAssistant.xcscheme
lib/Config/: Debug.h
lib/Fonts/: font50.c  fonts.h
lib/GUI/: GUI_BMP.c  GUI_BMP.h  GUI_Paint.c  GUI_Paint.h
lib/LCD/: LCD_2inch4.c
src/: App.tsx  config.ts  core.c  pngUtils.cpp  pngUtils.h  utils.c  utils.cpp  utils.h
src/bluetooth/: bluetoothServer.cpp  bluetoothServer.h  bluetooth_server.c  bluetooth_server.cpp  messageHandler.cpp  messageHandler.h
src/bluetooth/btferret/: btlib.c  btlib.h  keyboard.c
src/camera/: camera.c  camera.cpp  camera.h
src/common/: styles.ts  utils.ts
src/context/: coreContext.ts
src/core/: battery.cpp  battery.h  bluetooth.ts  camera.cpp  camera.h  common.cpp  common.h  common.ts  core.cpp  core.h  core.ts  deviceSettings.ts  gps.ts  gpsTask.ts  gpxParser.ts  mapProvider.ts  message.ts  renderer.cpp  renderer.h  tile.cpp  tile.h  tour.cpp  tour.h
src/display/: draw.c  draw.cpp  draw.h  intro_view.c  intro_view.cpp  intro_view.h  loader.c  loader.cpp
src/hooks/: useCoreEvent.ts
src/themes/: darkTheme.ts
src/utils/: gpsTourMock.ts  index.ts  math.ts
src/views/: Debug.tsx  DeviceConnection.tsx  GeneralOptions.tsx  LocationOptions.tsx  Main.tsx  MapLegend.tsx  PointsOfInterest.tsx  ViewRouter.tsx
